# agri_rover

docs/: run_options.md
firmware/: .gitignore  cc1101.h
firmware/controller_nrf24_link/: CMakeLists.txt  check_rc_link.py
firmware/controller_nrf24_link/backup/: CMakeLists.txt  main.cpp
firmware/controller_nrf24_link/master/: CMakeLists.txt  Documentation.md  main.cpp
firmware/controller_nrf24_link/slave/: CMakeLists.txt  Documentation.md  main.cpp
firmware/emitter/: CMakeLists.txt  main.c
firmware/rc_link_test/: CMakeLists.txt  Documentation.md  main.c  main.cpp
firmware/receiver/: CMakeLists.txt  main.c
monitor/: monitor.py
rover/: main.py
simulator/: sim.py
tools/: catch_hb.py  check_rc_link.py  rp2040_emulator.py  uart_monitor.py
